# WFiIS-SSN-project

./: .gitignore  README.md  pyproject.toml
RFDetr/: __init__.py  config.py  eval.py  train.py
YOLO/: YOLO_v8_n_s_m_and_YOLOv26.ipynb
YOLO/Ewolucja_YOLO/: YOLO_Notatnik.ipynb
YOLO/Ewolucja_YOLO/YOLO11s/: args.yaml  results.csv
YOLO/Ewolucja_YOLO/YOLOv5s/: args.yaml  results.csv
YOLO/Ewolucja_YOLO/YOLOv8s/: args.yaml  results.csv
YOLO/Najnowsze_YOLO/YOLO26s/: args.yaml  results.csv
YOLO/Strojenie_YOLOv8/YOLOv8_Medium/: args.yaml  results.csv
YOLO/Strojenie_YOLOv8/YOLOv8_Nano/: args.yaml  results.csv
YOLO/Strojenie_YOLOv8/YOLOv8_Small_Aug/: args.yaml  results.csv
YOLO/good_lightning_predictions/: wyniki_predykcji.ipynb
dataset/: __init__.py  augment.py  download.py  prepare.py  rfdetr_layout.py
fastrcnn/: best_model_1.pth  exp_adamw.pth  exp_baseline-adam.pth  exp_cosine-adam.pth  exp_cosine-sgd.pth  exp_lr-low.pth  exp_no-aug-adam-cosine.pth  exp_resnet18.pth  exp_resnet34.pth  exp_sgd.pth  fastrcnn.ipynb  requirements.txt  train_output_6_1.txt  train_output_6_2.txt
visualizations/: rfdetr_eval_20260605_141158.json  rfdetr_eval_20260605_141633.json  rfdetr_run_20260605_110853.json
